  (Dmitry)
- Fixed bug #34899 (Fixed sqlite extension compile failure). (Ilia)
- Fixed bug #34821 (zlib encoders fail on widely varying binary data on windows)
  (Mike, Ilia)
- Fixed bug #34782 (token_get_all() gives wrong result). (Dmitry)
- Fixed bug #34767 (Zend Engine 1 Compatibility not copying objects correctly).
  (Dmitry)
- Fixed bug #34712 (zend.ze1_compatibility_mode = on segfault). (Dmitry)
- Fixed bug #34623 (Crash in pdo_mysql on longtext fields). (Ilia)
- Fixed bug #33829 (mime_content_type() returns text/plain for gzip and bzip 
  files). (Derick)
- Fixed bug #33760 (cURL needs to implement CRYPTO_callback functions to prevent
  locking). (Mike, Ilia)
- Fixed bug #31341 (escape on curly inconsistent). (Dmitry)
- Fixed bug #31177 (menory leaks and corruption because of incorrect
  refcounting). (Dmitry)
- Fixed bug #29983 (PHP does not explicitly set mime type & charset). (Ilia)
- Fixed bug #29268 (__autoload() not called with Reflection->getClass()).
  (Dmitry)

17 Oct 2005, PHP 5.1 Release Candidate 3
- Fixed bug #34884 (Possible crash in ext/sqlite when sqlite.assoc_case is 
  being used). (Tony, Ilia)
- Fixed bug #34873 (Segmentation Fault on foreach in object). (Dmitry)
- Fixed bug #29361 (var_export() producing invalid code). (Derick)

14 Oct 2005, PHP 5.1 Release Candidate 2
- Changed SQLite extension to be a shared module in Windows distribution.
  (Edin)
- Changed "instanceof" and "catch" operators, is_a() and is_subclass_of()
  functions to not call __autoload(). (Dmitry)
- Improved SPL extension. (Marcus)
  . Moved RecursiveArrayIterator from examples into extension
  . Moved RecursiveFilterIterator from examples into extension
  . Added SplObjectStorage
  . Made all SPL constants class constants
  . Renamed CachingRecursiveIterator to RecursiveCachingIterator to follow
    Recursive<*>Iterator naming scheme.
- Upgraded bundled libraries:
  . PCRE library to version 6.2. (Andrei)
  . SQLite 3 library in ext/pdo_sqlite to 3.2.7. (Ilia)